--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
                 <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="top-banner">
+                <div class="banner-left-side">
+                    <h2 class="banner-left-title primary-color">
+                        Start your Journey as
+                        Influencer
+                    </h2>
+                    <p class="banner-left-description primary-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="prmary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="banner-right-image">
+                    <img src="images/main-camera.png" alt="">
+                </div>
+            </div>
+            <div class="bottom-banner display-flex">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+            </div>
+        </div>
     </header>
 </body>
 
