--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         Start your Journey as
                         Influencer
                     </h2>
-                    <p class="banner-left-description primary-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <p class="banner-left-description primary-color">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
                     <button class="prmary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="banner-right-image">
@@ -48,6 +49,99 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="card-section">
+            <h3 class="card-title">Popular Collection</h3>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <p class="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
+        </section>
+
+        <section class="feature-product">
+            <div class="feature-left">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="feature-right-text">
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="prmary-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-dribbble"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
