--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="Styles/style.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- star rating -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="poppins">
@@ -51,71 +53,163 @@
     </header>
     <main>
         <section class="card-section">
-            <h3 class="card-title">Popular Collection</h3>
+            <h2 class="card-title">Popular Collection</h2>
             <div class="card-container">
                 <div class="card">
                     <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <h3 class="inner-card-title">Flex Tripod</h3>
+                    <h4 class="inner-card-price">$50.48</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/mic.png" alt="">
+                    <h3 class="inner-card-title">microphone</h3>
+                    <h4 class="inner-card-price">$120.25</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/airpod.png" alt="">
+                    <h3 class="inner-card-title">Airbuds</h3>
+                    <h4 class="inner-card-price">$100.00</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/drone.png" alt="">
+                    <h3 class="inner-card-title">Drone</h3>
+                    <h4 class="inner-card-price">$980.25</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/lights.png" alt="">
+                    <h3 class="inner-card-title">Light Setup</h3>
+                    <h4 class="inner-card-price">$1200.00</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/setup.png" alt="">
+                    <h3 class="inner-card-title">Photoshoot set</h3>
+                    <h4 class="inner-card-price">$820.40</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/camera.png" alt="">
+                    <h3 class="inner-card-title">Vlogging Camera</h3>
+                    <h4 class="inner-card-price">$1800.80</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/single-light.png" alt="">
+                    <h3 class="inner-card-title">Green Screen</h3>
+                    <h4 class="inner-card-price">$25.48</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <h4>$50.48</h4>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <img src="images/action.png" alt="">
+                    <h3 class="inner-card-title">Action Camera</h3>
+                    <h4 class="inner-card-price">$380.00</h4>
+                    <div class="star-rating">
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star checked"></i>
+                    <i class="fa fa-star-half-full"></i>
+                    <span class="primary-color">4.99</span>
+                    </div>
+                    <div class="card-bottom-text">
+                    <span>Wordwide shifting</span><span>available</span> 
+                    <span>Buyers protection possible!</span>
+                    </div>
                 </div>
+                
+                
             </div>
             <p class="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
         </section>
@@ -126,20 +220,23 @@
             </div>
             <div class="feature-right-text">
                 <h2>Featured products at one place</h2>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 <button class="prmary-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </section>
     </main>
     <footer>
         <div class="footer-container">
-            <h3>Influencer products</h3>
-            <p>Copyright © 2020  influencer products</p>
-            <p>All rights reserved</p>
+            <h3 class="footer-title">Influencer products</h3>
+            <p class="Copyright">Copyright &copy; 2020 influencer products</p>
+            <p class="Copyright">All rights reserved</p>
+            <div class="social-link">
             <a href=""><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-dribbble"></i></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </div>
         </div>
     </footer>
 </body>
