--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
                 <img src="images/gear.png" alt="">
             </div>
             <div class="feature-right-text">
-                <h2>Featured products at one place</h2>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                <h2 class="feature-right-title">Featured products at one place</h2>
+                <p class="feature-right-description primary-color">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <button class="prmary-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="secondary-btn ">Join Now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </section>
     </main>
